migcom: do not include <machine/_types.h> from the build system
r329165 moved __va_list from <machine/_types.h> to <sys/_types.h>
and its definition is not present in our "${.OBJDIR}../../sys/sys/_types.h" either.

Since we improperly include <machine/_types.h> from the build machine, we
get it from neither header and the build fails:

--- parser.o ---
cc -O2 -pipe  -I/usr/home/saper/src/nextbsd/usr.bin/migcom -I/usr/home/saper/src/nextbsd/usr.bin/migcom/shims -I/usr/home/saper/src/nextbsd/usr.bin/migcom/../../include -I/usr/home/saper/src/nextbsd/usr.bin/migcom/../../sys -DYY_NO_UNPUT -g -MD  -MF.depend.parser.o -MTparser.o -std=gnu99  -Qunused-arguments  -I/build/obj/nextbsd/usr/home/saper/src/nextbsd/tmp/legacy/usr/include -c parser.c -o parser.o
--- parser.o ---
In file included from /usr/home/saper/src/nextbsd/usr.bin/migcom/parser.y:196:
/usr/home/saper/src/nextbsd/usr.bin/migcom/../../include/stdio.h:68:9: error: unknown type name '__va_list'
typedef __va_list       va_list;
        ^
/usr/home/saper/src/nextbsd/usr.bin/migcom/../../include/stdio.h:281:6: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
            __va_list);

--- a/usr.bin/migcom/Makefile
+++ b/usr.bin/migcom/Makefile
@@ -29,18 +29,18 @@ SRCS= ident.c error.c global.c header.c \
 	statement.c string.c type.c user.c utils.c
 
 
-CFLAGS+= -I${.CURDIR} -I${.CURDIR}/shims -I${.CURDIR}/../../include
+CFLAGS+= -I${.CURDIR} -I${.CURDIR}/shims -I${.CURDIR}/../../include -Iinclude
 CFLAGS+= -I${.CURDIR}/../../sys 
 CFLAGS+= -DYY_NO_UNPUT
 
 .if ${TARGET} == "amd64" || ${TARGET} == "i386"
-include/x86: ${.CURDIR}/Makefile
+include/machine: ${.CURDIR}/Makefile
 	mkdir -p include
-	ln -sf ${.CURDIR}/../../sys/x86/include include/x86
+	ln -sf ${.CURDIR}/../../sys/x86/include include/machine
 .endif
 
 .if ${TARGET} == "amd64" || ${TARGET} == "i386"
-ident.c: include/x86 
+ident.c: include/machine
 .else
 ident.c: 
 .endif
@@ -51,7 +51,7 @@ ident.c:
 
 CLEANFILES+= ident.c *.o *~ *.gz cscope.* 
 .if ${TARGET} == "amd64" || ${TARGET} == "i386"
-CLEANFILES+= include/x86
+CLEANFILES+= include/machine
 .endif
 
 .include <bsd.prog.mk>
