--- a/usr.bin/migcom/Makefile
+++ b/usr.bin/migcom/Makefile
@@ -29,18 +29,18 @@ SRCS= ident.c error.c global.c header.c \
 	statement.c string.c type.c user.c utils.c
 
 
-CFLAGS+= -I${.CURDIR} -I${.CURDIR}/shims -I${.CURDIR}/../../include -Iinclude
+CFLAGS+= -I${.CURDIR} -I${.CURDIR}/shims -I${.CURDIR}/../../include
 CFLAGS+= -I${.CURDIR}/../../sys 
 CFLAGS+= -DYY_NO_UNPUT
 
 .if ${TARGET} == "amd64" || ${TARGET} == "i386"
-include/machine: ${.CURDIR}/Makefile
+include/x86: ${.CURDIR}/Makefile
 	mkdir -p include
-	ln -sf ${.CURDIR}/../../sys/x86/include include/machine
+	ln -sf ${.CURDIR}/../../sys/x86/include include/x86
 .endif
 
 .if ${TARGET} == "amd64" || ${TARGET} == "i386"
-ident.c: include/machine
+ident.c: include/x86 
 .else
 ident.c: 
 .endif
@@ -51,7 +51,7 @@ ident.c:
 
 CLEANFILES+= ident.c *.o *~ *.gz cscope.* 
 .if ${TARGET} == "amd64" || ${TARGET} == "i386"
-CLEANFILES+= include/machine
+CLEANFILES+= include/x86
 .endif
 
 .include <bsd.prog.mk>
